[package]
name = "khaa-pk"
version = "0.1.0"
edition = "2021"
build="build.rs"

[build-dependencies]
cc = "1.0.78"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#compress = "0.2.1"
#bindgen = "0.63.0"

#byteorder = "1.4.3"

#crc = "3.0.1"
#crc32fast = "1.3.2" 
#flate2 = "1.0.25"
# You would ... use regex::Regex
regex = "1.7.1"
argsv = { path = "./argsv-rust/lib/rust/argsv/" }


